--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -6,9 +6,15 @@
 -->
 <ion-view view-title="{{chat.name}}">
   <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.lastText}}
-    </p>
+    <div class="list">
+      <div class="item item-input-inset">
+        <label class="item-input-wrapper">
+          <input type="text" ng-model="msg.text" placeholder="Type something here...">
+        </label>
+        <button class="button button-small" ng-click="sendMessage()">
+          Send
+        </button>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
