--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Account">
-  <ion-content>
+  <ion-content class="padding">
     <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
+      <button class="button button-block button-assertive" ng-click="logout()">
+        Logout
+      </button>
     </ion-list>
   </ion-content>
 </ion-view>
