Show connecting dialog

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -10,7 +10,7 @@
         </button>
       </div>
     </div>
-    <div class="list card" ng-repeat="user in users" href="#/tab/chats/{{user.id}}" ng-click="startChatWith({{user.id}})">
+    <div class="list card" ng-repeat="user in users" href="#/tab/chats/{{user.id}}" ng-click="startChatWith({{user}})">
       <div class="item item-avatar">
         <img src="{{user.avatar}}">
         <div class="row">
