Show received messages

--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="list">
-      <div class="card" ng-repeat="msg in msgList">
+      <div class="card" ng-repeat="msg in messages()">
         <div class="item item-text-wrap">
           <a class="item item-avatar" href="#" ng-show="{{msg.is_sender}}">
             <div class="row">
