--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -4,19 +4,8 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
-  <ion-content class="padding">
-    <div class="list">
-      <div class="item item-input-inset">
-        <label class="item-input-wrapper">
-          <input type="text" ng-model="msg.text" placeholder="Type something here...">
-        </label>
-        <button class="button button-small" ng-click="sendMessage()">
-          Send
-        </button>
-      </div>
-    </div>
-
+<ion-view view-title="聊天中...">
+  <ion-content>
     <div class="list">
       <div class="card" ng-repeat="msg in messages()">
         <div class="item item-text-wrap">
@@ -38,4 +27,14 @@
       </div>
     </div>
   </ion-content>
+  <ion-footer-bar class="bar bar-footer">
+    <div class="item-input-inset row">
+      <label class="item-input-wrapper col col-75">
+        <input type="text" ng-model="msg.text" placeholder="Type something here...">
+      </label>
+      <button class="button col col-25" ng-click="sendMessage()">
+        Send
+      </button>
+    </div>
+  </ion-footer-bar>
 </ion-view>
