--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -6,26 +6,12 @@
 -->
 <ion-view view-title="聊天中...">
   <ion-content>
-    <div class="list">
-      <div class="card" ng-repeat="msg in messages()">
-        <div class="item item-text-wrap">
-          <a class="item item-avatar" href="#" ng-show="{{msg.is_sender}}">
-            <div class="row">
-              <div class="col col-75">
-                <p>{{msg.text}}</p>
-              </div>
-              <div class="col col-25">
-                <img src="{{msg.avatar}}" />
-              </div>
-            </div>
-          </a>
-          <a class="item item-avatar" href="#" ng-show="{{!msg.is_sender}}">
-            <img src="{{msg.avatar}}" />
-            <p>{{msg.text}}</p>
-          </a>
-        </div>
-      </div>
-    </div>
+    <ul class="list">
+      <li class="item item-avatar item-text-wrap" ng-repeat="msg in messages()">
+        <img src="{{msg.sender.avatar}}" />
+        <h2>{{msg.text}}</h2>
+      </li>
+    </ul>
   </ion-content>
   <ion-footer-bar class="bar bar-footer">
     <div class="item-input-inset row">
