--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -7,9 +7,23 @@
 <ion-view view-title="聊天中...">
   <ion-content>
     <ul class="list">
-      <li class="item item-avatar item-text-wrap" ng-repeat="msg in messages()">
-        <img src="{{msg.sender.avatar}}" />
-        <div class="message_content_left">{{msg.text}}</div>
+      <li class="item no-border" ng-repeat="msg in messages()">
+        <div class="row" ng-hide="{{msg.is_sender}}">
+          <div class="col col-20">
+            <img width="50" height="50" src="{{msg.sender.avatar}}">
+          </div>
+          <div class="col col-80 item-text-wrap">
+            <div class="message message-content-left">{{msg.text}}</div>
+          </div>
+        </div>
+        <div class="row" ng-show="{{msg.is_sender}}">
+          <div class="col col-80 item-text-wrap">
+            <div class="message message-content-right">{{msg.text}}</div>
+          </div>
+          <div class="col col-20">
+            <img width="50" height="50" src="{{msg.sender.avatar}}">
+          </div>
+        </div>
       </li>
     </ul>
   </ion-content>
