--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,12 +1,13 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="广场">
   <ion-content class="padding">
     <div class="list">
       <div class="item item-input-inset">
         <label class="item-input-wrapper">
-          <input type="text" placeholder="Tag">
+          <i class="icon ion-search placeholder-icon"></i>
+          <input type="text" placeholder="特点">
         </label>
         <button class="button button-small" ng-click="search()">
-          Search
+          查找
         </button>
       </div>
     </div>
