--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -4,7 +4,7 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="聊天中...">
+<ion-view view-title="聊天">
   <ion-content>
     <ul class="list">
       <li class="item no-border" ng-repeat="msg in messages()">
@@ -30,10 +30,10 @@
   <ion-footer-bar class="bar bar-footer">
     <div class="item-input-inset row">
       <label class="item-input-wrapper col col-75">
-        <input type="text" ng-model="msg.text" placeholder="Type something here...">
+        <input type="text" ng-model="msg.text" placeholder="说点什么...">
       </label>
       <button class="button col col-25" ng-click="sendMessage()">
-        Send
+        发送
       </button>
     </div>
   </ion-footer-bar>
