--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,19 +4,19 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="Hug">
+<ion-view view-title="抱抱">
   <ion-content class="padding">
     <div class="list">
       <label class="item item-input">
-        <span class="input-label">Username</span>
+        <span class="input-label">邮箱</span>
         <input type="text" ng-model="user.name">
       </label>
       <label class="item item-input">
-        <span class="input-label">Password</span>
+        <span class="input-label">密码</span>
         <input type="password" ng-model="user.password">
       </label>
       <button class="button button-block button-positive" ng-click="login()">
-        Login
+        登录
       </button>
     </div>
   </ion-content>
