--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Account">
+<ion-view view-title="我">
   <ion-content class="padding">
     <ion-list>
       <button class="button button-block button-assertive" ng-click="logout()">
-        Logout
+        退出账号
       </button>
     </ion-list>
   </ion-content>
